--- a/public/css/global.css
+++ b/public/css/global.css
@@ -7,24 +7,28 @@ border		: 0;
 body, html{
 margin		: 0;
 padding		: 0;
+height: 100%;
 }
 
 #container{
 
 margin		: 0;
 padding		: 0;
+height: 100%;
 background-image	: url("/images/www_leyout_buffet_12.gif");
 background-repeat: repeat-y;
+display: table;
 }
 
 #left{
 width		: 234px;
 display: table-cell;
+vertical-align: top;
 }
 
 #right{
 display: table-cell;
-
+vertical-align: top;
 }
 
 #image1{
@@ -62,12 +66,6 @@ float		: left;
 width		: 63px;
 height		: 229px;
 background-image	: url(../images/www_leyout_buffet_11.gif);	
-}
-
-#image12{
-width		: 234px;
-height		: 703px;
-background-image	: url(../images/www_leyout_buffet_12.gif);
 }
 
 #image2356{
@@ -152,6 +150,7 @@ padding-right	: 30px;
 
 #main_content_news {
 overflow: auto;
+padding-bottom: 50px;
 }
 
 #main_content_news dl {
@@ -165,7 +164,6 @@ position	: absolute;
 
 #main_content_archive{
 width		: 798px;
-position	: absolute;
 }
 
 ul.menu_poziome li.menu_poziome{
