--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -5,9 +5,28 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Buffet</title>
     <?php echo $this->headLink()->appendStylesheet('/css/global.css') ?>
+	
+	<script type="text/javascript">
+   var imgs = new Array('wiosna1.jpg', 'wiosna2.jpg', 'wiosna3.jpg', 'wiosna4.jpg', 'wiosna6.jpg');
+   var pos  = 0;
+
+   function chImg()
+   {
+      var i = document.getElementById( 'imgField' );
+
+      i.src = 'pictures/' + imgs[ pos++ ];
+
+      if( pos >= 4 )
+      {
+         pos = 0;
+      }
+
+      window.setTimeout( 'chImg()', 5000 );
+   }
+</script>    
 </head>
 
-<body>
+<body onload=chImg();>
 
 <div id="container">
 	
