--- a/application/views/scripts/announcement/index.phtml
+++ b/application/views/scripts/announcement/index.phtml
@@ -3,8 +3,13 @@
 <dl>
     <?php foreach ($this->entries as $entry): ?>
     
+    <div id="main_content_announcement_picture">
+    <?php 
+    $sciezka = $this->escape($entry->getPictureName());
+    echo "<img  class=\"announcement\" src=\"$sciezka\">" ?>
+    </div>
+    
 	<dt class="announcement">
-	<div id="main_content_announcement_picture"><img class="announcement" src="../pictures/2.jpg" /></div><br />
     <div id="main_content_announcement_cont">
     <p class="announcement_title"><?php echo $this->escape($entry->getTitle()) ?></p>
     <p class="announcement_pre_content"><?php echo nl2br($this->escape($entry->getPreContentPl())) ?></p>
