--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -3,11 +3,20 @@
 <dl>
     <?php foreach ($this->entries as $entry): ?>
     
-	<dt class="archive">
-	<div id="main_content_archive_picture"><img class="archive" src="../pictures/3.jpg" /></div>
+    <dt class="archive">
+    
+    <div id="main_content_archive_picture">
+    <?php 
+    $sciezka = $this->escape($entry->getPictureName());
+    echo "<img  class=\"archive\" src=\"$sciezka\">" ?>
+    </div>
+    
+	
     <div id="main_content_archive_cont">
     <p class="archive_title"><?php echo $this->escape($entry->getTitle()) ?></p>
     <p class="archive_pre_content"><?php echo nl2br($this->escape($entry->getPreContentPl())) ?></p>
+    </div>
+    <div id=main_content_archive_break">
     </div>
     </dt>
     <?php endforeach ?>
