--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,5 +1,12 @@
 <div id="main_image">
+	<?php foreach ($this->entries2 as $entry2): ?>
+	<?php $sciezka = $this->escape($entry2->getName());
+    echo "<img class=\"main\" src=\"/pictures/wiosna1.jpg\" id=\"imgField\" />" ?>
+	<?php endforeach ?>
 </div>
+
+<script type="text/javascript">chImg();</script>
+
 <div id="main_content">
 
 <p class="main_text">
