Dodanie opcji resetowania parametrów, linki te nie potrzebują zapamiętywania parametrów

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -62,38 +62,38 @@
 					<div id="menu_top">
 						<ul class="menu_poziome">
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'index')); ?>">HOME</a>
+								<a href="<?= $this->url(array('controller'=>'index'), null, true); ?>">HOME</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'news')); ?>">NEWS</a>
+								<a href="<?= $this->url(array('controller'=>'news'), null, true); ?>">NEWS</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'announcement')); ?>">ZAPOWIEDZI</a>
+								<a href="<?= $this->url(array('controller'=>'announcement'), null, true); ?>">ZAPOWIEDZI</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'foto')); ?>">FOTO</a>
+								<a href="<?= $this->url(array('controller'=>'foto'), null, true); ?>">FOTO</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'video')); ?>">VIDEO</a>
+								<a href="<?= $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'card')); ?>">KARTA</a>
+								<a href="<?= $this->url(array('controller'=>'card'), null, true); ?>">KARTA</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'archive')); ?>">ARCHIWUM</a>
+								<a href="<?= $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIWUM</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?= $this->url(array('controller'=>'contact')); ?>">KONTAKT</a>
+								<a href="<?= $this->url(array('controller'=>'contact'), null, true); ?>">KONTAKT</a>
 							</li>
 						</ul>
 					</div>
 					<div id="menu_top_lng">
 						<ul class="menu_poziome2">
 							<li class="menu_poziome2">
-								<a href="<?= $this->url(array('controller'=>'index')); ?>">PL</a>
+								<a href="<?= $this->url(array('controller'=>'index'), null, true); ?>">PL</a>
 							</li>
 							<li class="menu_poziome2">
-								<a href="<?= $this->url(array('controller'=>'index')); ?>">EN</a>
+								<a href="<?= $this->url(array('controller'=>'index'), null, true); ?>">EN</a>
 							</li>
 						</ul>	
 					</div>
@@ -103,7 +103,6 @@
 		<div id="image7">
 		</div>
 		<div id="main">
-			
 			<?php echo $this->layout()->content ?>
 		</div>
 		
