--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -28,25 +28,17 @@
 <body onload=chImg();>
 
 <div id="container">
-	
 	<div id="left">
-		<div id="image1">
-		</div>
-		<div id="image8">
-		</div>
-		<div id="image1011">
-			<div id="menu_left">
-					<ul class="menu_pionowe">
-						<li class="menu_pionowe"><a href="offer">OFERTA</a></li>
-						<li class="menu_pionowe"><a href="partners">PARTNERZY</a></li>
-						<li class="menu_pionowe"><a href="newsletter">NEWSLETTER</a></li>
-						<li class="menu_pionowe"><a href="http://www.facebook.com/BUFFETklub" target="_blank">FACEBOOK</a></li>
-						<li class="menu_pionowe"><a href="http://vimeo.com/" target="_blank">VIMEO</a></li>
-						<li class="menu_pionowe"><a href="podcast">PODCAST</a></li>
-					</ul>
-			</div>
-			<div id="image11">
-			</div>
+		<div id="image8"></div>
+		<div id="menu_left">
+			<ul>
+				<li><a href="offer">OFERTA</a></li>
+				<li><a href="partners">PARTNERZY</a></li>
+				<li><a href="newsletter">NEWSLETTER</a></li>
+				<li><a href="http://www.facebook.com/BUFFETklub" target="_blank">FACEBOOK</a></li>
+				<li><a href="http://vimeo.com/" target="_blank">VIMEO</a></li>
+				<li><a href="podcast">PODCAST</a></li>
+			</ul>
 		</div>
 	</div>
 	
