--- a/public/css/global.css
+++ b/public/css/global.css
@@ -31,13 +31,8 @@ display: table-cell;
 vertical-align: top;
 }
 
-#image1{
-width		: 234px;
-height		: 140px;
-background-image	: url(../images/www_leyout_buffet_12.gif);
-}
-
 #image8{
+margin-top: 140px;
 width		: 234px;
 height		: 62px;
 background-image	: url(../images/www_leyout_buffet_08.gif);
@@ -55,17 +50,25 @@ height		: 229px;
 position: relative;
 }
 
-#menu_left > ul.menu_pionowe {
+#menu_left ul {
+	margin		: 0px;
+	padding		: 0px;	
+	vertical-align		: bottom;
+	list-style	: none;
 	position: absolute;
 	bottom: 0;
 	right: 0;
 }
 
-#image11{
-float		: left;
-width		: 63px;
-height		: 229px;
-background-image	: url(../images/www_leyout_buffet_11.gif);	
+#menu_left li {
+	margin: 0px;
+	padding: 0px;
+	padding-top: 7px;
+	padding-right: 15px;
+	display: block;
+	font-size	: 6.5pt;
+	font-family	: Arial;
+	text-align	: right;
 }
 
 #image2356{
@@ -167,7 +170,23 @@ height: 292px;
 width: 257px;	
 }
 
-#main_content_news_go{
+#main_content_news_go{#menu_left ul {
+	margin		: 0px;
+	padding		: 0px;	
+	vertical-align		: bottom;
+	list-style	: none;
+}
+
+#menu_left li {
+	margin: 0px;
+	padding: 0px;
+	padding-top: 7px;
+	padding-right: 15px;
+	display: block;
+	font-size	: 6.5pt;
+	font-family	: Arial;
+	text-align	: right;
+}
 
 padding-left: 20px;	
 }
@@ -225,27 +244,7 @@ text-align	: right;
 vertical-align	: bottom;
 }
 
-ul.menu_pionowe li.menu_pionowe{
-display		: block;
-list-style	: none;
-margin		: 0px;
-padding-right	: 15px;
-font-size	: 6.5pt;
-font-family	: Arial;
-text-align	: right;
-}
 
-ul.menu_pionowe{
-margin		: 0px;
-padding		: 0px;	
-vertical-align		: bottom;
-}
-
-li.menu_pionowe{
-margin		: 0px;
-padding		: 0px;
-padding-top	: 7px;
-}
 
 a{
 text-decoration		: none;
