--- a/application/views/scripts/news/index.phtml
+++ b/application/views/scripts/news/index.phtml
@@ -17,7 +17,7 @@
     
     <div id="main_content_news_go">
     	<div id="main_content_go">... </div>
-    	<a href="<?php echo $this->url(array('controller'=>'details', 'action'=>'index', 'id'=>$entry->getId()), null, true);?>"><div id="main_content_rectangle_go"></div></a>
+    	<a href="<?php echo $this->url(array('controller'=>'news', 'action'=>'details', 'id'=>$entry->getId()), null, true);?>"><div id="main_content_rectangle_go"></div></a>
     </div>
     
     </dt>
