--- a/application/views/scripts/partners/index.phtml
+++ b/application/views/scripts/partners/index.phtml
@@ -1,10 +1,4 @@
-<div id="main_image">
-	<?php foreach ($this->entries2 as $entry2): ?>
-	<?php $sciezka = $this->escape($entry2->getName());
-    echo "<img class=\"main\" src=\"/pictures/wiosna1.jpg\" id=\"imgField\" />" ?>
-	<?php endforeach ?>
-</div>
-
+<?= $this->partial('shared/main_images.phtml', array('pictures' => $this->entries2)); ?>
 
 <div id="main_content">
 
