--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -21,7 +21,7 @@
          pos = 0;
       }
 
-      window.setTimeout( 'chImg()', 5000 );
+      window.setTimeout( 'chImg()', 3000 );
    }
 </script>    
 </head>
@@ -38,12 +38,12 @@
 		<div id="image1011">
 			<div id="menu_left">
 					<ul class="menu_pionowe">
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'offer')); ?>">OFERTA</a></li>
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'partners')); ?>">PARTNERZY</a></li>
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'newsletter')); ?>">NEWSLETTER</a></li>
+						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'offer'), null, true); ?>">OFERTA</a></li>
+						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'partners'), null, true); ?>">PARTNERZY</a></li>
+						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'newsletter'), null, true); ?>">NEWSLETTER</a></li>
 						<li class="menu_pionowe"><a href="http://www.facebook.com/BUFFETklub" target="_blank">FACEBOOK</a></li>
 						<li class="menu_pionowe"><a href="http://vimeo.com/" target="_blank">VIMEO</a></li>
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'podcast')); ?>">PODCAST</a></li>
+						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'podcast'), null, true); ?>">PODCAST</a></li>
 					</ul>
 			</div>
 			<div id="image11">
@@ -62,38 +62,38 @@
 					<div id="menu_top">
 						<ul class="menu_poziome">
 							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'index')); ?>">HOME</a>
+								<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">HOME</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'news')); ?>">NEWS</a>
+								<a href="<?php echo $this->url(array('controller'=>'news'), null, true); ?>">NEWS</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<? echo $this->url(array('controller'=>'announcement')); ?>">ZAPOWIEDZI</a>
+								<a href="<?php echo $this->url(array('controller'=>'announcement'), null, true); ?>">ZAPOWIEDZI</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?php echo  $this->url(array('controller'=>'foto')); ?>">FOTO</a>
+								<a href="<?php echo  $this->url(array('controller'=>'foto'), null, true); ?>">FOTO</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'video')); ?>">VIDEO</a>
+								<a href="<?php echo $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'card')); ?>">KARTA</a>
+								<a href="<?php echo $this->url(array('controller'=>'card'), null, true); ?>">KARTA</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'archive')); ?>">ARCHIWUM</a>
+								<a href="<?php echo $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIWUM</a>
 							</li>
 							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'contact')); ?>">KONTAKT</a>
+								<a href="<?php echo $this->url(array('controller'=>'contact'), null, true); ?>">KONTAKT</a>
 							</li>
 						</ul>
 					</div>
 					<div id="menu_top_lng">
 						<ul class="menu_poziome2">
 							<li class="menu_poziome2">
-								<a href="<?php echo $this->url(array('controller'=>'index')); ?>">PL</a>
+								<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">PL</a>
 							</li>
 							<li class="menu_poziome2">
-								<a href="<?php echo $this->url(array('controller'=>'index')); ?>">EN</a>
+								<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">EN</a>
 							</li>
 						</ul>	
 					</div>
