Poprawienie konfliktów, zmiana nazwy kontrollera foto na gallery

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -30,66 +30,6 @@
 		<div id="left">
 			<div id="image8"></div>
 			<div id="menu_left">
-					<ul class="menu_pionowe">
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'offer'), null, true); ?>">OFERTA</a></li>
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'partners'), null, true); ?>">PARTNERZY</a></li>
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'newsletter'), null, true); ?>">NEWSLETTER</a></li>
-						<li class="menu_pionowe"><a href="http://www.facebook.com/BUFFETklub" target="_blank">FACEBOOK</a></li>
-						<li class="menu_pionowe"><a href="http://vimeo.com/" target="_blank">VIMEO</a></li>
-						<li class="menu_pionowe"><a href="<?php echo $this->url(array('controller'=>'podcast'), null, true); ?>">PODCAST</a></li>
-					</ul>
-			</div>
-			<div id="image11">
-			</div>
-		</div>
-	</div>
-	
-	<div id="right">
-		<div id="image2356">
-			<div id="image2">
-			</div>
-			<div id="image356">
-				<div id="image3">
-				</div>
-				<div id="image56">
-					<div id="menu_top">
-						<ul class="menu_poziome">
-							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">HOME</a>
-							</li>
-							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'news'), null, true); ?>">NEWS</a>
-							</li>
-							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'announcement'), null, true); ?>">ZAPOWIEDZI</a>
-							</li>
-							<li class="menu_poziome">
-								<a href="<?php echo  $this->url(array('controller'=>'foto'), null, true); ?>">FOTO</a>
-							</li>
-							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
-							</li>
-							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'card'), null, true); ?>">KARTA</a>
-							</li>
-							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIWUM</a>
-							</li>
-							<li class="menu_poziome">
-								<a href="<?php echo $this->url(array('controller'=>'contact'), null, true); ?>">KONTAKT</a>
-							</li>
-						</ul>
-					</div>
-					<div id="menu_top_lng">
-						<ul class="menu_poziome2">
-							<li class="menu_poziome2">
-								<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">PL</a>
-							</li>
-							<li class="menu_poziome2">
-								<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">EN</a>
-							</li>
-						</ul>	
-=======
 				<ul>
 					<li>
 						<a href="<?php echo $this->url(array('controller'=>'offer'), null, true); ?>">OFERTA</a>
@@ -130,7 +70,7 @@
 									<a href="<?= $this->url(array('controller'=>'announcement'), null, true); ?>">ZAPOWIEDZI</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'foto'), null, true); ?>">FOTO</a>
+									<a href="<?= $this->url(array('controller'=>'gallery'), null, true); ?>">FOTO</a>
 								</li>
 								<li class="menu_poziome">
 									<a href="<?= $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
@@ -156,7 +96,6 @@
 								</li>
 							</ul>	
 						</div>
->>>>>>> f798e82b87eadfec2d2dca957600ecbbe7e2a073
 					</div>
 				</div>
 			</div>
