Poprawki short open tag i przywrócenie optymalizacji styli

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -61,38 +61,38 @@
 						<div id="menu_top">
 							<ul class="menu_poziome">
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'index'), null, true); ?>">HOME</a>
+									<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">HOME</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'news'), null, true); ?>">NEWS</a>
+									<a href="<?php echo $this->url(array('controller'=>'news'), null, true); ?>">NEWS</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'announcement'), null, true); ?>">ZAPOWIEDZI</a>
+									<a href="<?php echo $this->url(array('controller'=>'announcement'), null, true); ?>">ZAPOWIEDZI</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'gallery'), null, true); ?>">FOTO</a>
+									<a href="<?php echo $this->url(array('controller'=>'gallery'), null, true); ?>">FOTO</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
+									<a href="<?php echo $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'card'), null, true); ?>">KARTA</a>
+									<a href="<?php echo $this->url(array('controller'=>'card'), null, true); ?>">KARTA</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIWUM</a>
+									<a href="<?php echo $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIWUM</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?= $this->url(array('controller'=>'contact'), null, true); ?>">KONTAKT</a>
+									<a href="<?php echo $this->url(array('controller'=>'contact'), null, true); ?>">KONTAKT</a>
 								</li>
 							</ul>
 						</div>
 						<div id="menu_top_lng">
 							<ul class="menu_poziome2">
 								<li class="menu_poziome2">
-									<a href="<?= $this->url(array('controller'=>'index'), null, true); ?>">PL</a>
+									<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">PL</a>
 								</li>
 								<li class="menu_poziome2">
-									<a href="<?= $this->url(array('controller'=>'index'), null, true); ?>">EN</a>
+									<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">EN</a>
 								</li>
 							</ul>	
 						</div>
