--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -1,4 +1,4 @@
-<?= $this->partial('shared/main_images.phtml', array('pictures' => $this->entries2)); ?>
+<?php echo $this->partial('shared/main_images.phtml', array('pictures' => $this->entries2)); ?>
 
 <div id="main_content">
 
