--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,46 +1,41 @@
-*{
-padding		: 0;
-margin		: 0;
-border		: 0;
+* {
+	padding: 0;
+	margin: 0;
+	border: 0;
 }
 
-body, html{
-margin		: 0;
-padding		: 0;
-height: 100%;
+body, html {
+	margin: 0;
+	padding: 0;
+	height: 100%;
 }
 
-#container{
-
-margin		: 0;
-padding		: 0;
-height: 100%;
-background-image	: url("/images/www_leyout_buffet_12.gif");
-background-repeat: repeat-y;
-display: table;
+#container {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	background-image: url(/images/www_leyout_buffet_red_line.gif);
+	background-repeat: repeat-y;
+	display: table;
 }
 
 #left{
-width		: 234px;
-display: table-cell;
-vertical-align: top;
+	width: 234px;
+	display: table-cell;
+	vertical-align: top;
 }
 
 #right{
-display: table-cell;
-vertical-align: top;
-}
-
-#image1{
-width		: 234px;
-height		: 140px;
-background-image	: url(../images/www_leyout_buffet_12.gif);
+	display: table-cell;
+	vertical-align: top;
 }
 
 #image8{
-width		: 234px;
-height		: 62px;
-background-image	: url(../images/www_leyout_buffet_08.gif);
+	margin-top: 140px;
+	width: 234px;
+	height: 62px;
+	background-image: url(/images/www_leyout_buffet_blue_line.gif);
 }
 
 #image1011{
@@ -55,29 +50,38 @@ height		: 229px;
 position: relative;
 }
 
-#menu_left > ul.menu_pionowe {
+#menu_left ul {
+	margin		: 0px;
+	padding		: 0px;	
+	vertical-align		: bottom;
+	list-style	: none;
 	position: absolute;
 	bottom: 0;
 	right: 0;
 }
 
-#image11{
-float		: left;
-width		: 63px;
-height		: 229px;
-background-image	: url(../images/www_leyout_buffet_11.gif);	
+#menu_left li {
+	margin: 0px;
+	padding: 0px;
+	padding-top: 7px;
+	padding-right: 15px;
+	display: block;
+	font-size	: 6.5pt;
+	font-family	: Arial;
+	text-align	: right;
 }
 
 #image2356{
-width		: 723px;
-height		: 96px;	
+	width: 723px;
+	height: 96px;
+	margin-bottom: 44px;
 }
 
 #image2{
 float		: left;
 width		: 215px;
 height		: 96px;
-background-image	: url(../images/www_leyout_buffet_02.gif);	
+background-image	: url(/images/www_leyout_buffet_buffet_text.gif);	
 }
 
 #image356{
@@ -86,15 +90,10 @@ width		: 508px;
 height		: 96px;	
 }
 
-#image3{
-width		: 508px;
-height		: 75px;
-background-image	: url(../images/www_leyout_buffet_03.gif);
-}
-
 #image56{
-width		: 508px;
-height		: 21px;	
+	width: 508px;
+	height: 21px;
+	margin-top: 75px;
 }
 
 #menu_top{
@@ -125,19 +124,9 @@ position	: relative;
 	right:0;
 }
 
-#image7{
-width		: 723px;
-height		: 44px;
-background-image	: url(../images/www_leyout_buffet_07.gif);
-}
-
-#main{
-}
-
 #main_image{
-width		: 723px;
-height		: 291px;
-background-image	: url(../images/www_leyout_buffet_09.gif);
+	width: 723px;
+	height: 291px;
 }
 
 #main_content{
@@ -168,8 +157,7 @@ width: 257px;
 }
 
 #main_content_news_go{
-
-padding-left: 20px;	
+	padding-left: 20px;	
 }
 
 #main_content_go{
@@ -267,28 +255,6 @@ font-size	: 6.5pt;
 font-family	: Arial;
 text-align	: right;
 vertical-align	: bottom;
-}
-
-ul.menu_pionowe li.menu_pionowe{
-display		: block;
-list-style	: none;
-margin		: 0px;
-padding-right	: 15px;
-font-size	: 6.5pt;
-font-family	: Arial;
-text-align	: right;
-}
-
-ul.menu_pionowe{
-margin		: 0px;
-padding		: 0px;	
-vertical-align		: bottom;
-}
-
-li.menu_pionowe{
-margin		: 0px;
-padding		: 0px;
-padding-top	: 7px;
 }
 
 a{
