wchodzenie w szczegoly i powrot

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -55,7 +55,7 @@
 		
 		<div id="right">
 			<div id="image2356">
-				<div id="image2"></div>
+				<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>"><div id="image2"></div></a>
 				<div id="image356">
 					<div id="image56">
 						<div id="menu_top">
