--- a/application/views/scripts/announcement/index.phtml
+++ b/application/views/scripts/announcement/index.phtml
@@ -13,19 +13,15 @@
     <div id="main_content_announcement_cont">
     <p class="announcement_title"><?php echo $this->escape($entry->getTitle()) ?></p>
     <p class="announcement_pre_content"><?php echo nl2br($this->escape($entry->getPreContentPl())) ?></p>
-    <p class="announcement_pre_content"><?php echo nl2br($this->escape($entry->getPictureId())) ?></p>
     </div>
+    
+    <div id="main_content_announcement_go">
+    	<div id="announcement_content_go">...</div>
+    	<a href="<?php echo $this->url(array('controller'=>'announcement', 'action'=>'details', 'id'=>$entry->getId()), null, true);?>"><div id="main_content_rectangle_go"></div></a>
+    </div>
+    
     </dt>
     <?php endforeach ?>
 </dl>
-
-<br /><br /><br /><br /><br /><br /><br /><br />
-<p><a href="<?php echo $this->url(
-    array(
-        'controller' => 'news',
-        'action'     => 'sign'
-    ),
-    'default',
-    true) ?>">Sign Our Guestbook</a></p>
 
 </div>
