--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -18,6 +18,12 @@
     </div>
     <div id=main_content_archive_break">
     </div>
+    
+    <div id="main_content_news_go">
+    	<div id="main_content_go">...</div>
+    	<a href="<?php echo $this->url(array('controller'=>'archive', 'action'=>'details', 'id'=>$entry->getId()), null, true);?>"><div id="main_content_rectangle_go"></div></a>
+    </div>
+    
     </dt>
     <?php endforeach ?>
     <dt style="clear: both"/>
