--- a/public/css/global.css
+++ b/public/css/global.css
@@ -158,6 +158,7 @@ width: 257px;
 
 #main_content_news_go{
 	padding-left: 20px;	
+	padding-bottom: 40px;
 }
 
 #main_content_go{
@@ -165,7 +166,6 @@ float: left;
 width: 222px;
 text-align	: right;
 padding-right: 3px;
-
 }
 
 #main_content_rectangle_go{
@@ -182,13 +182,24 @@ width		: 723px;
 padding-bottom: 50px;
 }
 
+#main_content_announcement_go{
+	padding-left: 20px;	
+}
+
+#announcement_content_go{
+float: left;
+width: 319px;
+text-align	: right;
+padding-right: 3px;
+}
+
+
 #main_content_archive{
 width		: 798px;
 padding-bottom: 50px;
 }
-#main_content_archive_break{
-height: 25px;
-}
+
+
 
 #details{
 width	: 723px;
@@ -205,7 +216,6 @@ padding-bottom	: 50px;
 #details_cont{
 float	: left;
 width	: 353px;
-height	: 517px;
 padding-bottom	: 50px;
 }
 
@@ -223,16 +233,33 @@ padding-top: 15px;
 
 #details_content{
 width	: 353px;
-height	: 484px;
 font-size	: 8pt;
 font-family	: Arial;
 text-align	: justify;
 padding-left: 25px;
 margin_top: 0px;
 padding-top: 0px;
-
 }
 
+#details_main_back{
+padding-left: 25px;	
+}
+
+#details_back{
+float: left;
+width: 310px;
+text-align	: left;
+padding-left: 3px;
+}
+
+#details_rectangle_back{
+float: left;
+height	: 12px;
+width	: 12px;
+background-color	:#FF0000;
+vertical-align: bottom;
+margin-top	: 5px;
+}	
 	
 ul.menu_poziome li.menu_poziome{
 display		: block;
@@ -359,7 +386,6 @@ margin-bottom: 8px;
 
 dt.archive{
 width: 257px;
-height: 186px;
 float: left;
 padding-right: 9px;
 display: table-cell;
@@ -404,7 +430,6 @@ height: 169px;
 #main_content_announcement_cont{
 float: left;
 width: 354px;
-height: 169px;
 }
 
 #main_content_archive_picture{
@@ -414,7 +439,6 @@ height: 62px;
 
 #main_content_archive_cont{
 width: 257px;
-height: 99px;
 }
 
 
