--- a/application/views/scripts/announcement/index.phtml
+++ b/application/views/scripts/announcement/index.phtml
@@ -11,7 +11,11 @@
     
 	<dt class="announcement">
     <div id="main_content_announcement_cont">
-    <p class="announcement_title"><?php echo $this->escape($entry->getTitle()) ?></p>
+    <p class="announcement_title">
+    	<?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?>
+    	<?php echo $this->escape($entry->getTitle()) ?>
+    </p>
+    
     <p class="announcement_pre_content"><?php echo nl2br($this->escape($entry->getPreContentPl())) ?></p>
     </div>
     
