--- a/application/views/scripts/news/index.phtml
+++ b/application/views/scripts/news/index.phtml
@@ -11,7 +11,11 @@
     </div>
     
     <div id="main_content_news_cont">
-    <p class="news_title"><?php echo $this->escape($entry->getTitle()) ?></p>
+    <p class="news_title">
+    <?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?>
+    <?php echo $this->escape($entry->getTitle())?>
+    
+    </p>
     <p class="news_pre_content"><?php echo nl2br($this->escape($entry->getPreContentPl())) ?></p>
     </div>
     
