--- a/application/layouts/scripts/layout_en.phtml
+++ b/application/layouts/scripts/layout_en.phtml
@@ -32,10 +32,10 @@
 			<div id="menu_left">
 				<ul>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'offer'), null, true); ?>">OFERTA</a>
+						<a href="<?php echo $this->url(array('controller'=>'offer'), null, true); ?>">OFFER</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'partners'), null, true); ?>">PARTNERZY</a>
+						<a href="<?php echo $this->url(array('controller'=>'partners'), null, true); ?>">PARTNERS</a>
 					</li>
 					<li>
 						<a href="<?php echo $this->url(array('controller'=>'newsletter'), null, true); ?>">NEWSLETTER</a>
@@ -67,7 +67,7 @@
 									<a href="<?php echo $this->url(array('controller'=>'news'), null, true); ?>">NEWS</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'announcement'), null, true); ?>">ZAPOWIEDZI</a>
+									<a href="<?php echo $this->url(array('controller'=>'announcement'), null, true); ?>">ANNOUNCEMENT</a>
 								</li>
 								<li class="menu_poziome">
 									<a href="<?php echo $this->url(array('controller'=>'gallery'), null, true); ?>">FOTO</a>
@@ -76,13 +76,13 @@
 									<a href="<?php echo $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'card'), null, true); ?>">KARTA</a>
+									<a href="<?php echo $this->url(array('controller'=>'card'), null, true); ?>">CARD</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIWUM</a>
+									<a href="<?php echo $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIVE</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'contact'), null, true); ?>">KONTAKT</a>
+									<a href="<?php echo $this->url(array('controller'=>'contact'), null, true); ?>">CONTACT</a>
 								</li>
 							</ul>
 						</div>
