zmiana layoutu pl-en

--- a/application/layouts/scripts/layout_en.phtml
+++ b/application/layouts/scripts/layout_en.phtml
@@ -32,13 +32,13 @@
 			<div id="menu_left">
 				<ul>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'offer'), null, true); ?>">OFFER</a>
+						<a href="<?php echo $this->url(array('controller'=>'offer', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">OFFER</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'partners'), null, true); ?>">PARTNERS</a>
+						<a href="<?php echo $this->url(array('controller'=>'partners', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">PARTNERS</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter'), null, true); ?>">NEWSLETTER</a>
+						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">NEWSLETTER</a>
 					</li>
 					<li>
 						<a href="http://www.facebook.com/BUFFETklub" target="_blank">FACEBOOK</a>
@@ -47,7 +47,7 @@
 						<a href="http://vimeo.com/" target="_blank">VIMEO</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'podcast'), null, true); ?>">PODCAST</a>
+						<a href="<?php echo $this->url(array('controller'=>'podcast', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">PODCAST</a>
 					</li>
 				</ul>
 			</div>
@@ -55,44 +55,44 @@
 		
 		<div id="right">
 			<div id="image2356">
-				<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>"><div id="image2"></div></a>
+				<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>"><div id="image2"></div></a>
 				<div id="image356">
 					<div id="image56">
 						<div id="menu_top">
 							<ul class="menu_poziome">
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'index'), null, true); ?>">HOME</a>
+									<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">HOME</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'news'), null, true); ?>">NEWS</a>
+									<a href="<?php echo $this->url(array('controller'=>'news', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">NEWS</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'announcement'), null, true); ?>">ANNOUNCEMENT</a>
+									<a href="<?php echo $this->url(array('controller'=>'announcement', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">ANNOUNCEMENT</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'gallery'), null, true); ?>">FOTO</a>
+									<a href="<?php echo $this->url(array('controller'=>'gallery', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">FOTO</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'video'), null, true); ?>">VIDEO</a>
+									<a href="<?php echo $this->url(array('controller'=>'video', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">VIDEO</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'card'), null, true); ?>">CARD</a>
+									<a href="<?php echo $this->url(array('controller'=>'card', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">CARD</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'archive'), null, true); ?>">ARCHIVE</a>
+									<a href="<?php echo $this->url(array('controller'=>'archive', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">ARCHIVE</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'contact'), null, true); ?>">CONTACT</a>
+									<a href="<?php echo $this->url(array('controller'=>'contact', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">CONTACT</a>
 								</li>
 							</ul>
 						</div>
 						<div id="menu_top_lng">
 							<ul class="menu_poziome2">
 								<li class="menu_poziome2">
-									<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index'), null, true); ?>">PL</a>
+									<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">PL</a>
 								</li>
 								<li class="menu_poziome2">
-									<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'indexen'), null, true); ?>">EN</a>
+									<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index', 'lang'=>'en'), null, true); ?>">EN</a>
 								</li>
 							</ul>	
 						</div>
