--- a/application/views/scripts/announcement/details.phtml
+++ b/application/views/scripts/announcement/details.phtml
@@ -21,7 +21,7 @@
     	</div>
     	
     	<div id="details_main_back">
-    		<a href="<?php echo $this->url(array('controller'=>'announcement'), null, true); ?>"><div id="details_rectangle_back"></div></a>
+    		<a href="<?php echo $this->url(array('controller'=>'announcement', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>"><div id="details_rectangle_back"></div></a>
     		<div id="details_back">...</div>
     	
     </div>
