--- a/application/layouts/scripts/layout_en.phtml
+++ b/application/layouts/scripts/layout_en.phtml
@@ -1,9 +1,12 @@
-<?php echo $this->doctype() ?>
+<?php echo $this->doctype() ?> 
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Buffet</title>
-	<?php echo $this->headLink()->appendStylesheet('/css/global.css') ?>
+	<?php echo $this->headLink()->appendStylesheet('/css/global.css') ?> 
+	<?php echo $this->headScript()
+		->prependFile('/js/main.js')
+		->prependFile('/js/jquery-1.7.2.min.js') ?>
 	
 	<script type="text/javascript">
 		imgs = [];
